syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHellos (HelloRequest) returns (stream HelloReply);
  rpc SayHelloCounter (stream HelloCounterRequest) returns (HelloCounterResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message HelloCounterRequest {
  string message = 1;
  int32 messageCount = 2;
}

message HelloCounterResponse {
  int32 count = 1;    
}
